# even-laster-engine

./: README.md  demo.vcxproj  demo.vcxproj.filters  meson.build  meson_options.txt  packages.config  sync.rocket
build-aux/flatpak/: freeimage.patch  xyz.kusma.aurora.appdata.xml  xyz.kusma.aurora.desktop  xyz.kusma.aurora.json
data/: meson.build
data/shaders/: meson.build
src/: gen-fbm.cpp  main.cpp  meson.build  scenerenderer.cpp  scenerenderer.h  shader.cpp  swapchain.cpp  vkInstance.cpp  vulkan.h
src/core/: memorymappedfile.h
src/scene/: buffer.cpp  buffer.h  import-texture.cpp  rendertarget.h  scene.cpp  scene.h  sceneimporter.cpp  sceneimporter.h  texture.cpp  texture.h
src/shaders/: bloom_upscale.frag  postprocess.comp  refraction.frag  triangle.frag
subprojects/: glfw.wrap  glm.wrap
